# gazebo_world_api

./: CMakeLists.txt  README.md  package.xml
include/gazebo_world_api/: gazebo_world_api_plugin.h
src/: gazebo_world_api_plugin.cpp
srv/: DeleteModels.srv  SpawnModels.srv
